fixed about us spacing

--- a/style.css
+++ b/style.css
@@ -546,11 +546,9 @@ tr rd{
     color: #fff;
 }
 .team-container{
-    position: relative;
-    margin-top: 100px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .team-container .our_team{
     display: flex;
@@ -709,7 +707,7 @@ tr rd{
 /* About Us */
 
 /* Contact us */
-@media screen and (max-width: 600px){
+@media screen and (max-width: 850px){
     .contact-box{
         display: block;
     }
